# hector

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  config.yaml  healthtech-tools-2025-08-21.md  healthtech-tools-2025-08-22.md  healthtech-tools.md  pyproject.toml  requirements.txt  scan_and_curate.py
.github/: CODEOWNERS  pull_request_template.md
.taskmaster/: state.json
docs/: badge.json  index.html
hector/: __init__.py  categorizer.py  config.py  renderer.py  scanner.py  scorer.py  vcs.py
result/: healthtech-tools-2025-08-21.md  healthtech-tools-2025-08-22.md  healthtech-tools-2025-08-24.md  healthtech-tools-2025-08-25.md  healthtech-tools-2025-08-27.md  healthtech-tools-2025-08-28.md  healthtech-tools-2025-08-29.md  healthtech-tools-2025-08-30.md  healthtech-tools-2025-08-31.md  healthtech-tools-2025-09-01.md  healthtech-tools-2025-09-02.md  healthtech-tools-2025-09-03.md  healthtech-tools-2025-09-04.md  healthtech-tools-2025-09-05.md  healthtech-tools-2025-09-06.md  healthtech-tools-2025-09-07.md  healthtech-tools-2025-09-08.md  healthtech-tools-2025-09-09.md  healthtech-tools-2025-09-10.md  healthtech-tools-2025-09-11.md  healthtech-tools-2025-09-12.md  healthtech-tools-2025-09-13.md  healthtech-tools-2025-09-14.md  healthtech-tools-2025-09-15.md  healthtech-tools-2025-09-16.md  healthtech-tools-2025-09-17.md  healthtech-tools-2025-09-18.md  healthtech-tools-2025-09-19.md  healthtech-tools-2025-09-20.md  healthtech-tools-2025-09-21.md  healthtech-tools-2025-09-22.md  (+243 more)
(+122 files in other folders)
